# pico-jlink-template

./: .envrc  .gitmodules  CMakeLists.txt  Makefile  README.md
src/: main.c
tools/: jlink-debug  jlink-erase  jlink-flash  jlink-gdb  jlink-rtt  jlink-run  rp2040-debug  rp2040-erase  rp2040-flash  rp2040-rtt-viewer
